syntax = "proto3";
package lambda_view;

service LambdaView {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc StreamParams (ParamsRequest) returns (stream ParamsResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ParamsRequest {
  string key = 1;
}

message ParamsResponse {
  string json = 1;
}